--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Scales Supath Gurung
+		    Supath Gurung APCSA
 	    </footer>
 	</body>
 </html>
